Fix spacing in chat box

--- a/client/src/components/ChatBox/ChatBox.css
+++ b/client/src/components/ChatBox/ChatBox.css
@@ -2,8 +2,8 @@
     background: var(--cardColor);
     border-radius: 1rem;
     display: grid;
-    grid-template-rows: 14vh 60vh 13vh;
-    /* min-height: 96vh; */
+    grid-template-rows: 14vh 71vh 13vh;
+    min-height: 96vh;
 }
 
 .chat-header {
@@ -18,6 +18,7 @@
     gap: 0.5rem;
     padding: 1.5rem;
     overflow: scroll;
+    scrollbar-width: none;
 }
 
 .message {
